[package]
name = "trunks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs.git", branch = "master" }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "bigdecimal"] }
dotenv = "0.15.0"
tokio = { version = "1.19.0", features = ["full"] }
log = "0.4.14"
bigdecimal = "0.4.5"
env_logger = "0.9.0"
num-bigint = "0.4.0"
num-traits = "0.2.14"
url = "2.2.2"
